src/test/ui/resolve_self_super_hint.stderr
error[E0432]: unresolved import `alloc`
  --> $DIR/resolve_self_super_hint.rs:16:9
   |
LL |     use alloc::HashMap;
   |         ^^^^^ Did you mean `self::alloc`?

error[E0432]: unresolved import `alloc`
  --> $DIR/resolve_self_super_hint.rs:20:13
   |
LL |         use alloc::HashMap;
   |             ^^^^^ Did you mean `super::alloc`?

error[E0432]: unresolved import `alloc`
  --> $DIR/resolve_self_super_hint.rs:24:17
   |
LL |             use alloc::HashMap;
   |                 ^^^^^ Did you mean `a::alloc`?

error[E0432]: unresolved import `alloc`
  --> $DIR/resolve_self_super_hint.rs:28:21
   |
LL |                 use alloc::HashMap;
   |                     ^^^^^ Did you mean `a::alloc`?

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0432`.
